--- a/package.json
+++ b/package.json
@@ -4,17 +4,22 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "json-server": "json-server --watch db.json --port 5000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.6",
+    "@reduxjs/toolkit": "^2.2.7",
     "framer-motion": "^11.5.4",
+    "json-server": "^1.0.0-beta.2",
     "next": "14.2.8",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
