--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "framer-motion": "^11.5.4",
     "json-server": "^1.0.0-beta.2",
     "next": "14.2.8",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "sweetalert2": "^11.14.0"
   },
   "devDependencies": {
     "@types/node": "^20",
