--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "framer-motion": "^11.5.4",
     "json-server": "^1.0.0-beta.2",
+    "jwt-decode": "^4.0.0",
     "next": "14.2.8",
     "next-auth": "^4.24.7",
     "react": "^18",
