--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ GITHUB_ID=Ov23lijX17PEDk2DjITb
 GITHUB_SECRET=c1b0ee7555aa111090530eb61a7412b0666767d1;
 
 NEXTAUTH_SECRET=abc;
-BACKEND_URL=http://localhost:5000/api
+BACKEND_URL=https://grocery-store-server-orpin.vercel.app/api
