--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "14.2.8",
     "next-auth": "^4.24.7",
     "react": "^18",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.53.0",
